@@ -132,12 +132,12 @@ t_pick_percent_name = Pick "%name%"
 t_series_info = Info about series
 t_yes = Yes
 t_no = No
-t_series_not_in_collection = Series isn't part of your collection
+t_series_in_collection = You already have this series. Add another one instance
+t_series_not_in_collection = You don't have this series. Add one instance
 t_i_have = I have
 t_only_for_paid_users = Only for paid users
 t_i_bought_for = I bought for
 t_out_of_n_stamps = out of {0} stamps
-t_series_in_collection = Series is part of your collection
 t_add_to_collection = Add to collection
 t_remove_from_collection = Remove from collection
 t_need_authentication_to_add_series_to_collection = \
