@@ -131,12 +131,12 @@ t_pick_percent_name = Выбрать "%name%"
 t_series_info = Информация о серии
 t_yes = Да
 t_no = Нет
-t_series_not_in_collection = Этой серии нет в вашей коллекции
+t_series_in_collection = Эта серия уже есть в вашей коллекции. Добавить еще один экземпляр
+t_series_not_in_collection = Этой серии нет в вашей коллекции. Добавить экземпляр
 t_i_have = У меня есть
 t_only_for_paid_users = Только для платных пользователей
 t_i_bought_for = Я купил за
 t_out_of_n_stamps = из {0} марок
-t_series_in_collection = Эта серия есть в вашей коллекции
 t_add_to_collection = Добавить в коллекцию
 t_remove_from_collection = Убрать из коллекции
 t_need_authentication_to_add_series_to_collection = \
