@@ -100,6 +100,14 @@ SELECT COUNT(*) \
  WHERE c.user_id = :user_id \
    AND cs.series_id = :series_id
 
+collection.find_series_instances = \
+SELECT cs.id, cs.number_of_stamps \
+  FROM collections c \
+  JOIN collections_series cs \
+    ON cs.collection_id = c.id \
+ WHERE c.user_id = :user_id \
+   AND cs.series_id = :series_id
+
 collection.add_series_to_collection = \
 INSERT \
   INTO collections_series \
@@ -117,10 +125,10 @@ SELECT c.id AS collection_id \
   FROM collections c \
  WHERE c.user_id = :user_id
 
-collection.remove_series_from_collection = \
+collection.remove_series_instance_from_collection = \
 DELETE \
   FROM collections_series \
- WHERE series_id = :series_id \
+ WHERE id = :id \
    AND collection_id = ( \
          SELECT id \
            FROM collections \
